@@ -75,6 +75,7 @@ module W = struct
   let weight e = G.E.label e
   let zero = 0
   let add = (+)
+  let sub = (-)
   let compare = compare
 end
 
