@@ -9,6 +9,8 @@
  o new module type Sig.WEIGHT (used in Path, Prim, and Nonnegative)
  o Fixpoint: do not catch Not_found raised by a user-provided function.
  o Adding folds to BFS.
+ o new functor [Path.Johnson] to compute all pairs of shortest paths
+   using Johnson's algorithm
 
 version 1.8.6, January 23, 2015
 -------------------------------
